# chatty-lora

./: .gitignore  CHANGELOG.md  Cargo.toml  GLOSSARY.md  HANDSHAKE.md  README.md  USER_MANUAL.md  manifest.json  network_capabilities.json  tmp_dashboard.json  visual_load.json
config/training/: README.md
defaults/: sources.json
models/wan/dependencies/: README.md
models/wan21_t2v_1_3b/: README.md
outputs/training/: README.md
runtime/: README.md
src/: backend_registry.rs  lane_registry.rs  main.rs  model_registry.rs  state.rs  types.rs
src/builder/: mod.rs
src/datasets/: mod.rs
src/helper/: mod.rs
src/runner/: mod.rs
src/sources/: mod.rs  registry.rs  site_fix.rs
src/sources/adapters/: generic_gallery_html.rs  mod.rs  openverse.rs  wikimedia_commons.rs
src/training/: mod.rs
static/: app.js  concept-stack.js  index.html  styles.css
