[package]
name = "chatty-lora"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
walkdir = "2.5.0"
webbrowser = "1.0.6"
